# SUMMIT

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  Test Results - .html  config.json  config_docker.json  docker-compose.yml  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_cuda.txt
src/: Utils.py  attention_visualization.ipynb  config.py  dataset.py  datasets.py  main.py  model.py  test.py  test_transformer.py  train.py  transformer.py  visualization.ipynb  visualization.py  visualization222.ipynb  web.py
src/app/: __init__.py
src/tests/: transformer-model-test.py
summit-web/: .dockerignore  Dockerfile  index.html  package.json  vite.config.js  vite.config.prod.js
summit-web/src/: App.vue
summit-web/src/components/: Translator.vue
